chore(feat/guevara): integrate sonarqube, fix reported issues and add controller tests